infra/services/monitor/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.sanlovie.com
      http:
        paths:
          - backend:
              serviceName: prometheus-operator-grafana
              servicePort: 3000
